cache control added in header

--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,7 @@
 								below.</p>
 						</div>
 						<form id="formAuthorize">
-							<a href="" onclick="$(this).closest('form').submit()" class="btn2">Retrieve MyInfo</a>
+							<a href="#" onclick="$(this).closest('form').submit()" class="btn2">Retrieve MyInfo</a>
 						</form>
 						<hr>
 						<small>Note: refer to the <a href="https://www.ndi-api.gov.sg/library/myinfo/resources-personas"
